<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RegisterActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="@dimen/activity_padding"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0px"
                    android:layout_height="0px" />

                <android.support.v7.widget.AppCompatImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop ="@dimen/element_margin"
                    android:layout_marginBottom="@dimen/element_margin"
                    android:src="@drawable/logo" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/RegisterInfo"
                    android:textSize="@dimen/TextSize"
                    android:gravity="center"
                    style="@style/Label"
                    android:paddingTop="@dimen/activity_padding"
                    android:paddingBottom="@dimen/activity_padding" />

                <EditText
                    android:id="@+id/FirstNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/FirstName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/element_margin" />

                <EditText
                    android:id="@+id/LastNameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/LastName"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/element_margin" />

                <Spinner
                    android:id="@+id/GenderSpinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    style="@style/PrimarySpinner"
                    android:layout_marginBottom="@dimen/element_margin"/>

                <EditText
                    android:id="@+id/EmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/element_margin"/>

                <EditText
                    android:id="@+id/PhoneInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Phone"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/element_margin"/>

                <EditText
                    android:id="@+id/UsernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/element_margin"/>

                <EditText
                    android:id="@+id/PasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/element_margin"/>

                <EditText
                    android:id="@+id/ConfirmPasswordInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/ConfirmPassword"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:layout_marginBottom="@dimen/element_margin"/>

                <Button
                    android:id="@+id/loginButton"
                    style="@style/PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:text="@string/Register"
                    android:onClick="onRegisterButtonClick"/>

                <TextView
                    android:id="@+id/backToLoginButton"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:text="@string/BackToLogin"
                    android:textSize="@dimen/SecundaryButtonTextSize"
                    android:layout_marginTop="@dimen/element_margin"
                    android:textStyle="bold"
                    style="@style/Label"
                    android:onClick="onBackToLoginButtonClick"
                    android:layout_marginBottom="@dimen/element_margin"/>

            </LinearLayout>
        </ScrollView>

    <ProgressBar
        android:id="@+id/RegisterProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        android:layout_marginTop="150dp"
        android:visibility="gone"
        android:background="#77EEEEEE"/>

</RelativeLayout>