<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/element_margin"
            android:src="@drawable/logo" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="@dimen/activity_padding"
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0px"
                    android:layout_height="0px" />

                <EditText
                    android:id="@+id/usernameInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:inputType="text"
                    android:maxLines="1"
                    android:layout_marginTop="@dimen/element_margin"
                    android:layout_marginBottom="@dimen/element_margin"
                    android:singleLine="true"/>

                    <EditText
                        android:layout_marginBottom="@dimen/element_margin"
                        android:id="@+id/passwordInput"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/Password"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>


                <Button
                    android:id="@+id/loginButton"
                    style="@style/PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="5dp"

                    android:text="@string/Login"
                    android:onClick="onLoginButtonClick"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"

                    android:layout_gravity="center_horizontal"
                    android:gravity="center_horizontal"
                    android:layout_marginBottom="@dimen/element_margin"
                    android:layout_marginTop="@dimen/element_margin">

                    <TextView
                        style="@style/Label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/NoUserAccount"
                        android:textSize="@dimen/SecundaryButtonTextSize" />

                    <TextView
                        style="@style/Label"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="5dp"
                        android:onClick="onRegisterButtonClick"
                        android:text="@string/Register"
                        android:textSize="@dimen/SecundaryButtonTextSize"
                        android:textStyle="bold" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/ForgetPassword"
                    android:textSize="@dimen/SecundaryButtonTextSize"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    style="@style/Label"
                    android:onClick="onForgetPasswordButtonClick"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/loginProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        android:layout_marginTop="150dp"
        android:visibility="gone"
        android:background="#77EEEEEE"/>
</RelativeLayout>