<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ForgetPasswordContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".ForgetPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/element_margin"
            android:src="@drawable/logo" />

        <!-- Register progress -->
        <ProgressBar
            android:id="@+id/registerProgress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center_horizontal"
            />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:padding="@dimen/activity_padding"
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:layout_width="0px"
                    android:layout_height="0px" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ForgetPasswordInfo"
                    android:textSize="@dimen/TextSize"
                    android:gravity="center"
                    style="@style/Label"
                    android:paddingBottom="@dimen/activity_padding"/>

                <EditText
                    android:id="@+id/EmailInput"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <Button
                    style="@style/PrimaryButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/element_margin"

                    android:text="@string/RequestCode"
                    android:onClick="onRequestCodeButtonClick"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textAllCaps="false"
                    android:gravity="center"
                    android:text="@string/BackToLogin"
                    android:textSize="@dimen/SecundaryButtonTextSize"
                    android:layout_marginTop="@dimen/element_margin"
                    android:textStyle="bold"
                    style="@style/Label"
                    android:onClick="onBackToLoginButtonClick"
                    android:layout_marginBottom="@dimen/element_margin"/>

            </LinearLayout>
        </ScrollView>
    </LinearLayout>

    <ProgressBar
        android:id="@+id/ForgetPasswordProgress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/activity_padding"
        android:paddingBottom="@dimen/activity_padding"
        android:layout_marginTop="120dp"
        android:visibility="gone"
        android:background="#77EEEEEE"/>

</RelativeLayout>